# vibecoding-zoomcamp

./: README.md
01-todo/: README.md  db.sqlite3
01-todo/tasks/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
01-todo/tasks/migrations/: 0001_initial.py
01-todo/tasks/templates/tasks/: base.html  task_confirm_delete.html  task_form.html  task_list.html
01-todo/todo_project/: settings.py  urls.py
02-end-to-end/: README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  render.yaml
02-end-to-end/.agent/rules/: backend-dependency-management.md  regular-commits.md
02-end-to-end/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  openapi.yaml  pyproject.toml
02-end-to-end/backend/app/: config.py  database.py  db_models.py  models.py
02-end-to-end/backend/app/routers/: execute.py  rooms.py  websocket.py
02-end-to-end/backend/tests/: conftest.py  test_api.py  test_flow.py
02-end-to-end/backend/tests_integration/: conftest.py  test_collaboration_flow.py  test_room_lifecycle.py
02-end-to-end/frontend/: .dockerignore  .env.local.example  .gitignore  Dockerfile  README.md  jest.config.js  jest.setup.js  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
02-end-to-end/frontend/__tests__/app/: home-page.test.jsx  room-page.test.jsx
02-end-to-end/frontend/app/: layout.tsx  page.jsx
02-end-to-end/frontend/components/: code-editor.jsx
02-end-to-end/frontend/hooks/: use-websocket.ts
02-end-to-end/frontend/lib/: api.js  code-executor.js
02-end-to-end/workflows/: ci-cd.yml
(+6 files in other folders)
